--- a/static/index.html
+++ b/static/index.html
@@ -1,115 +1,361 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT Clone</title>
+    <title>Food Products Display</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f6f8;
             margin: 0;
             padding: 20px;
-            background-color: #f0f0f0;
         }
-        .chat-container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+            color: #2c3e50;
+        }
+
+        .food-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .food-card {
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            transition: transform 0.2s;
         }
-        .chat-box {
-            height: 500px;
-            overflow-y: auto;
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
+
+        .food-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
+            background-color: #e8f6ff;
         }
-        .message {
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
+
+        h1 span {
+            position: absolute;
+            top: 1.5;
+            right: 200px;
+            animation: slideRight 1.2s ease forwards;
         }
-        .user-message {
-            background-color: #e3f2fd;
-            margin-left: 20%;
-        }
-        .bot-message {
-            background-color: #f5f5f5;
-            margin-right: 20%;
-        }
-        .input-container {
-            display: flex;
-            gap: 10px;
-        }
-        #user-input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            font-size: 16px;
-        }
+
         button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
+            padding: 10px 18px;
+            font-size: 16px;
+            border: none;
+            background: linear-gradient(to right, #667eea, #764ba2);
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+        }
+
+        button:hover {
+            transform: scale(1.05);
+            background: linear-gradient(to right, #764ba2, #667eea);
+        }
+
+        @keyframes slideRight {
+            0% {
+                transform: translateX(-50px);
+                opacity: 0;
+            }
+
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        /* Popup Menu Styles */
+        .popup {
+            position: absolute;
+            top: 70px;
+            right: 0;
+            background: white;
+            padding: 20px;
+            width: 250px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+            border-radius: 12px;
+            display: none;
+            animation: popupFade 0.3s ease;
+        }
+
+        .popup.active {
+            display: block;
+        }
+
+        .popup h3 {
+            margin-top: 0;
+            font-size: 18px;
+        }
+
+        .popup button.reset {
+            margin-top: 10px;
+            background: #ff4d4f;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
+            padding: 6px 10px;
             cursor: pointer;
-            font-size: 16px;
         }
-        button:hover {
-            background-color: #45a049;
+
+        .popup button.apply {
+            margin-top: 10px;
+            background: #52c41a;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 6px 10px;
+            cursor: pointer;
+        }
+
+
+        @keyframes popupFade {
+            from {
+                opacity: 0;
+                transform: translateY(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .food-title {
+            font-size: 20px;
+            margin: 0;
+            color: #2c3e50;
+            margin-bottom: 8px;
+        }
+
+        .food-type {
+            font-size: 14px;
+            color: #7f8c8d;
+            margin-bottom: 15px;
+            font-weight: 500;
+        }
+
+        .food-type.vegetarian {
+            color: #27ae60;
+        }
+
+        .food-type.non-vegetarian {
+            color: #e74c3c;
+        }
+
+        .food-nutrients {
+            margin: 15px 0;
+        }
+
+        .food-nutrients span {
+            display: inline-block;
+            background-color: #ecf0f1;
+            padding: 6px 12px;
+            margin: 3px;
+            border-radius: 20px;
+            font-size: 13px;
+            font-weight: 500;
+        }
+
+        .food-description {
+            font-size: 14px;
+            color: #34495e;
+            line-height: 1.5;
+            margin-top: 15px;
+        }
+
+        .loading {
+            text-align: center;
+            color: #7f8c8d;
+            margin: 50px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+
+        /* Wave Bars Loader */
+        .wave-dots {
+            display: flex;
+            gap: 4px;
+        }
+
+        .wave-dot {
+            width: 8px;
+            height: 40px;
+            background: linear-gradient(to bottom, #3498db, #2c3e50);
+            border-radius: 4px;
+            animation: wave 1.2s ease-in-out infinite;
+        }
+
+        .wave-dot:nth-child(1) {
+            animation-delay: 0s;
+        }
+
+        .wave-dot:nth-child(2) {
+            animation-delay: 0.1s;
+        }
+
+        .wave-dot:nth-child(3) {
+            animation-delay: 0.2s;
+        }
+
+        .wave-dot:nth-child(4) {
+            animation-delay: 0.3s;
+        }
+
+        .wave-dot:nth-child(5) {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes wave {
+
+            0%,
+            40%,
+            100% {
+                transform: scaleY(0.4);
+                opacity: 0.7;
+            }
+
+            20% {
+                transform: scaleY(1);
+                opacity: 1;
+            }
+        }
+
+        .loading-text {
+            font-size: 16px;
+            font-weight: 500;
+            color: #2c3e50;
         }
     </style>
 </head>
+
 <body>
-    <div class="chat-container">
-        <h1>ChatGPT Clone</h1>
-        <div class="chat-box" id="chat-box">
-            <div class="message bot-message">Hello! How can I help you today?</div>
-        </div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type your message here...">
-            <button onclick="sendMessage()">Send</button>
-        </div>
+    <h1>Food Recommendation System <span><button onclick="togglePopup()">Filter</button></span></h1>
+    <div class="popup" id="popupMenu">
+        <form action="/submit" method="post">
+            <h3>Nutrition Filter</h3>
+            <p>Protein :</p>
+            <input type="number" name="protin" id="protin" placeholder="Enter protein" min="0" step="any" />
+            <br>
+            <p>Fat :</p>
+            <input type="number" name="fat" id="fat" placeholder="Enter fat" min="0" step="any" />
+            <br>
+            <p>Carbohydrates :</p>
+            <input type="number" name="carbos" id="Carbohydrates" placeholder="Enter Carbohydrates" min="0"
+                step="any" /><br>
+
+            <button type="submit" class="apply">Apply</button>
+        </form>
+        <button class="reset" onclick="togglePopup()">Reset</button>
+
+
+    </div>
     </div>
 
     <script>
-        function sendMessage() {
-            const userInput = document.getElementById('user-input');
-            const chatBox = document.getElementById('chat-box');
-            const message = userInput.value.trim();
-
-            if (message) {
-                // Add user message
-                const userDiv = document.createElement('div');
-                userDiv.className = 'message user-message';
-                userDiv.textContent = message;
-                chatBox.appendChild(userDiv);
-
-                // Clear input
-                userInput.value = '';
-
-                // Simulate bot response (you can replace this with actual API call)
-                setTimeout(() => {
-                    const botDiv = document.createElement('div');
-                    botDiv.className = 'message bot-message';
-                    botDiv.textContent = "I'm a simple clone. To make me functional, you'll need to connect me to a backend API.";
-                    chatBox.appendChild(botDiv);
-                    chatBox.scrollTop = chatBox.scrollHeight;
-                }, 1000);
-            }
+        function togglePopup() {
+            const popup = document.getElementById('popupMenu');
+            popup.classList.toggle('active');
         }
 
-        // Allow sending message with Enter key
-        document.getElementById('user-input').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                sendMessage();
+        // Close popup when clicking outside
+        document.addEventListener('click', function (event) {
+            const popup = document.getElementById('popupMenu');
+            const button = document.querySelector('button[onclick="togglePopup()"]');
+
+            // If popup is open and click is outside the popup and the button
+            if (popup.classList.contains('active') &&
+                !popup.contains(event.target) &&
+                !button.contains(event.target)) {
+                popup.classList.remove('active');
             }
         });
     </script>
+
+
+    <div id="loading" class="loading">
+        <div class="wave-dots">
+            <div class="wave-dot"></div>
+            <div class="wave-dot"></div>
+            <div class="wave-dot"></div>
+            <div class="wave-dot"></div>
+            <div class="wave-dot"></div>
+        </div>
+        <div class="loading-text">Loading delicious products...</div>
+    </div>
+
+    <div class="food-container" id="food-container" style="display: none;">
+        {% for product in products %}
+        <div class="food-card">
+            <h2 class="food-title">{{ product.p_name }}</h2>
+            <div class="food-type">
+                {% if product.p_type == 0 %}
+                Vegetarian
+                {% else %}
+                Non-Vegetarian
+                {% endif %}
+            </div>
+            <div class="food-nutrients">
+                <span>Protein: {{ product.protin }} g</span>
+                <span>Carbs: {{ product.carbos }} g</span>
+                <span>Fat: {{ product.fat }} g</span>
+            </div>
+            <div class="food-description">
+                {{ product.description }}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <script>
+        function hideLoader() {
+            const loading = document.getElementById('loading');
+            const container = document.getElementById('food-container');
+
+            loading.style.display = 'none';
+            container.style.display = 'grid';
+        }
+
+        // Simulate loading delay and show products
+        // In your actual implementation, call hideLoader() after your data loads
+        setTimeout(hideLoader, 1500);
+
+        /*
+        USAGE INSTRUCTIONS:
+        
+        1. Replace the sample data above with your actual backend data
+        2. Remove the setTimeout and call hideLoader() when your data is ready
+        3. The Jinja2 template will render the products server-side
+        4. Use this structure in your Flask/Django template:
+        
+        In your view/route:
+        context = {'products': your_products_list}
+        return render_template('your_template.html', **context)
+        */
+    </script>
 </body>
+
 </html>
